Version 2.7 (X X, 2016) - ""
------------------------------------------------------------------------------

*** CORE/CPU ***
64bit compilation supported
new S14001A sound core for old Sterns (Catacomb, Flight 2000, Freefall, Lightning, Orbitor 1, and Split Second)
improved BSMT2000 sound core for Sega, Alvin G. DMDs, Data East DMDs (Batman and newer), and Stern DMDs (up to Terminator 3)

*** ROM SUPPORT *** Thanks to Inkochnito
New:
MAC: MAC Jungle (1995 version)
Sleic: Bike Race (2-ball play)
Sonic: Hang-On
Unknown: Wild Texas (Firepower II Modification)

Clones:
Hook 4.01p (4.01 with Prototype Sound)
Inder Centaur (alternate version)
Hyperball L-3
Lethal Weapon 2.03
Meteor (Bonus Count Fix, 'Fixes a rare bug where the bonus seems to countdown endlessly')
Taxi LU-1



Version 2.6 (December 24, 2015) - "The team awakens"
------------------------------------------------------------------------------
Three and a half years have gone by since the last release.
We kept everybody happy by putting out beta versions now and then,
but now we felt the time was right to issue a new version.

This time, Visual PinMAME will also be bundled with the new VP10 in one installer package
in order to reduce the amount of inherent knowledge needed to create a working playable setup.

Have fun, and Merry Christmas everyone! :)

*** CORE/CPU ***
Set DCS sample rate to 31,250 Hz, fixes most DCS sound issues
Optimization to DCS sound decoding for 1993-era games (STTNG, IJ, JD)
(Optional) Separate RGB-Color selection for the 4 DMD shades
Added driver for MAC / CICPlay games
Correct display outputs on IDSA
Slight digits correction for Papillon
Different display handling for Tecnoplay "Space Team"
Added Y8950 sound for Tecnoplay games and Astrocade sound for Midway's Rotation VIII
Corrected Atari gen.1 & gen.2 sound (so make sure you have the 82s130.bin in the ROM set)
Fixed display width for Black Belt (Squawk and Talk)
Some fixes for Midnight Marauders